--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,7 +1,7 @@
 name: in_app_notifier
-description: A new Flutter package project.
-version: 0.0.1
-homepage:
+description: This package shows a notification in the app in an easy way using your own widgets and alignment wherever you want on the screen.
+version: 0.0.2
+homepage: https://github.com/Delmed26/in_app_notifier
 
 environment:
   sdk: '>=2.18.5 <3.0.0'
